data/derived/sp14/progs/unify/prog4625.ml.out
Characters 125-127:
  | Average (e1,e2)-> (float)(e1+e2)/2
                              ^^
Error: This expression has type expr but an expression was expected of type
         int
